# cogmemai-python

./: LICENSE  README.md  pyproject.toml
cogmemai/: __init__.py  client.py
