[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogmemai"
version = "1.0.0"
description = "CogmemAi — Persistent memory for AI coding assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "HiFriendbot", email = "developers@hifriendbot.com" }]
keywords = ["ai", "memory", "claude", "coding-assistant", "mcp", "developer-tools"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://hifriendbot.com/developer/"
Documentation = "https://hifriendbot.com/developer/"
Repository = "https://github.com/hifriendbot/cogmemai-python"
Issues = "https://github.com/hifriendbot/cogmemai-python/issues"
